fix for wrapping option boxes in webkit

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -103,7 +103,7 @@ body.archive .zm-tt-navigation-container li.most-recent-task { background: #fff;
 .zm-tt-form-container form { font: 300 12px/1.4em sans-serif; }
 .zm-tt-form-container form p { float: left; width: 100%; margin: 0 0 20px 0; }
 .zm-tt-form-container form p label { float: left; margin-bottom: 5px; }
-.zm-tt-form-container form fieldset { border: 0; float: left; width: 20%; margin: 0 10px 10px 0; }
+.zm-tt-form-container form fieldset { border: 0; float: left; width: 18%; margin: 0 10px 10px 0; }
 .zm-tt-form-container form fieldset label { clear: both; float: left; font-weight: 300; margin: 0 0 4px 5px; }
 .zm-tt-form-container textarea { height: 200px; padding: 5px; width: 97%; }
 .zm-tt-form-container textarea,
@@ -122,7 +122,7 @@ clear: both; float: left; padding: 5px; width: 97%;
 .zm-tt-form-container textarea:focus { border-color: #939393; box-shadow: 0 0 3px #939393; }
 .zm-tt-form-container select,
 .zm-tt-form-container textarea { border: 1px solid #ddd; color: #888; padding: 5px; }
-.zm-tt-form-container select { font-weight: 300; font-size: 12px; margin-top: 5px; }
+.zm-tt-form-container select { font-weight: 300; font-size: 12px; margin-top: 5px; width: 90%; }
 
 .zm-tt-form-container .form-wrapper { float: left; padding: 30px; }
 
@@ -223,7 +223,7 @@ a.login { font-size: 12px; margin: 10px 10px 0 0; display: inline-block; }
 .main-container { float: left; width: 700px; margin-right: 10px; }
 .zm-tt-sidebar-container { float: right; width: 220px; margin-left: 10px; }
 
-.zm-tt-form-container #filter_task_form .form-wrapper { padding: 15px 0 35px 5px; }
+.zm-tt-form-container #filter_task_form .form-wrapper { float: left; padding: 15px 0 35px 5px; width: 100%;}
 .tt-filter-container { float: left; margin-bottom: 20px; width: 100%; }
 ul.inline { list-style-type: none; margin: 0; padding: 0; }
 ul.inline li { float: left; }
